--- a/common/src/main/resources/assets/nethervinery/lang/en_us.json
+++ b/common/src/main/resources/assets/nethervinery/lang/en_us.json
@@ -52,6 +52,6 @@
   "effect.nethervinery.improved_gravedigger": "Improved Gravedigger",
   "effect.nethervinery.hearthstone": "Hearthstone",
   "effect.nethervinery.improved_hearthstone": "Improved Hearthstone",
-  "itemGroup.nethervinery.nethervinery_tab": "Nether Vinery",
+  "itemGroup.nethervinery.nethervinery_tab": "[Let's Do] Nether Vinery",
   "rei.nethervinery.wine_press_category": "Apple Press"
 }
