--- a/common/src/main/resources/assets/nethervinery/lang/de_de.json
+++ b/common/src/main/resources/assets/nethervinery/lang/de_de.json
@@ -52,6 +52,6 @@
   "effect.nethervinery.improved_gravedigger": "Verbesserter Grabräuber",
   "effect.nethervinery.hearthstone": "Hearthstone",
   "effect.nethervinery.improved_hearthstone": "Verbesserter Hearthstone",
-  "itemGroup.nethervinery.nethervinery_tab": "Nether Vinery",
+  "itemGroup.nethervinery.nethervinery_tab": "[Let's Do] Nether Vinery",
   "rei.nethervinery.wine_press_category": "Apfelpresse"
 }
