--- a/common/src/main/resources/assets/nethervinery/lang/de_de.json
+++ b/common/src/main/resources/assets/nethervinery/lang/de_de.json
@@ -7,6 +7,7 @@
   "block.nethervinery.crimson_fermentation_barrel": "Karmesinholz Gärfass",
   "block.nethervinery.crimson_grape_crate": "Kiste voller Karmesintrauben",
   "block.nethervinery.crimson_grapevine_pot": "Karmesinholzpott",
+  "block.nethervinery.crimson_lattice": "Karmesinholzrankengitter",
   "block.nethervinery.crimson_wine_rack_big": "Grosses Karmesinholzflaschenregal",
   "block.nethervinery.crimson_wine_rack_mid": "Karmesinholzflaschenregal",
   "block.nethervinery.crimson_wine_rack_small": "Kleines Karmesinholzflaschenregal",
@@ -20,6 +21,7 @@
   "block.nethervinery.reinforced_crimson_planks": "Verstärkte Karmesinholzbretter",
   "block.nethervinery.reinforced_warped_planks": "Verstärkte Wirrholzholzbretter",
   "block.nethervinery.warped_apple_press": "Wirrholzapfelpresse",
+  "block.nethervinery.warped_lattice": "Wirrholzrankengitter",
   "block.nethervinery.warped_barrel": "Wirrholzfass",
   "block.nethervinery.warped_fermentation_barrel": "Wirrholz Gärungsfass",
   "block.nethervinery.warped_grape_crate": "Kiste voller Wirrtrauben",
