--- a/common/src/main/resources/assets/nethervinery/lang/en_us.json
+++ b/common/src/main/resources/assets/nethervinery/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.nethervinery.crimson_barrel": "Crimson Barrel",
   "block.nethervinery.crimson_fermentation_barrel": "Crimson Aging Barrel",
   "block.nethervinery.crimson_grape_crate": "Crimson Grape Crate",
+  "block.nethervinery.crimson_lattice": "Crimson Lattice",
   "block.nethervinery.crimson_grapevine_pot": "Crimson Grapevine Pot",
   "block.nethervinery.crimson_wine_rack_big": "Big Crimson Wine Bottle Storage",
   "block.nethervinery.crimson_wine_rack_mid": "Crimson Wine Bottle Storage",
@@ -24,6 +25,7 @@
   "block.nethervinery.warped_fermentation_barrel": "Warped Aging Barrel",
   "block.nethervinery.warped_grape_crate": "Warped Grape Crate",
   "block.nethervinery.warped_grapevine_pot": "Warped Grapevine Pot",
+  "block.nethervinery.warped_lattice": "Warped Lattice",
   "block.nethervinery.warped_wine_rack_big": "Big Warped Wine Bottle Storage",
   "block.nethervinery.warped_wine_rack_mid": "Warped Wine Bottle Storage",
   "block.nethervinery.warped_wine_rack_small": "Small Warped Wine Bottle Storage",
