--- a/common/src/main/resources/assets/nethervinery/lang/ru_ru.json
+++ b/common/src/main/resources/assets/nethervinery/lang/ru_ru.json
@@ -6,10 +6,11 @@
   "block.nethervinery.crimson_barrel": "Багровая бочка",
   "block.nethervinery.crimson_fermentation_barrel": "Багровая винная бочка",
   "block.nethervinery.crimson_grape_crate": "Мешок багрового винограда",
+  "block.nethervinery.crimson_lattice": "Багровая решётка",
   "block.nethervinery.crimson_grapevine_pot": "Багровая лохань",
-  "block.nethervinery.crimson_wine_rack_big": "Большой багровый стеллаж для вина",
+  "block.nethervinery.crimson_wine_rack_big": "Большой багровый винный стеллаж",
   "block.nethervinery.crimson_wine_rack_mid": "Багровая винная стойка",
-  "block.nethervinery.crimson_wine_rack_small": "Малый багровый стеллаж для вина",
+  "block.nethervinery.crimson_wine_rack_small": "Малый багровый винный стеллаж",
   "block.nethervinery.ghastly_grenache": "Призрачный гренаш",
   "block.nethervinery.improved_lava_fizz": "Бурлящее лава-шампанское",
   "block.nethervinery.improved_nether_fizz": "Искрящееся адское шампанское",
@@ -24,9 +25,10 @@
   "block.nethervinery.warped_fermentation_barrel": "Искажённая винная бочка",
   "block.nethervinery.warped_grape_crate": "Мешок искажённого винограда",
   "block.nethervinery.warped_grapevine_pot": "Искажённая лохань",
-  "block.nethervinery.warped_wine_rack_big": "Большой искажённый стеллаж для вина",
+  "block.nethervinery.warped_lattice": "Искажённая решётка",
+  "block.nethervinery.warped_wine_rack_big": "Большой искажённый винный стеллаж",
   "block.nethervinery.warped_wine_rack_mid": "Искажённая винная стойка",
-  "block.nethervinery.warped_wine_rack_small": "Малый искажённый стеллаж для вина",
+  "block.nethervinery.warped_wine_rack_small": "Малый искажённый винный стеллаж",
   "item.nethervinery.crimson_grape": "Багровый виноград",
   "item.nethervinery.crimson_grape_seeds": "Косточки багрового винограда",
   "item.nethervinery.crimson_grapejuice": "Сок из багрового винограда",
