Added missing bush block langs

--- a/common/src/main/resources/assets/nethervinery/lang/en_us.json
+++ b/common/src/main/resources/assets/nethervinery/lang/en_us.json
@@ -5,6 +5,7 @@
   "block.nethervinery.crimson_apple_press": "Crimson Apple Press",
   "block.nethervinery.crimson_barrel": "Crimson Barrel",
   "block.nethervinery.crimson_fermentation_barrel": "Crimson Aging Barrel",
+  "block.nethervinery.crimson_grape_bush": "Crimson Grape Bush",
   "block.nethervinery.crimson_grape_crate": "Crimson Grape Crate",
   "block.nethervinery.crimson_lattice": "Crimson Lattice",
   "block.nethervinery.crimson_grapevine_pot": "Crimson Grapevine Pot",
@@ -23,6 +24,7 @@
   "block.nethervinery.warped_apple_press": "Warped Apple Press",
   "block.nethervinery.warped_barrel": "Warped Barrel",
   "block.nethervinery.warped_fermentation_barrel": "Warped Aging Barrel",
+  "block.nethervinery.warped_grape_bush": "Warped Grape Bush",
   "block.nethervinery.warped_grape_crate": "Warped Grape Crate",
   "block.nethervinery.warped_grapevine_pot": "Warped Grapevine Pot",
   "block.nethervinery.warped_lattice": "Warped Lattice",
